# Open-Assistant

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml
backend/: .env  .gitignore  Dockerfile  assistant.yaml  debug_startup.sh  entrypoint.sh  kernel.json  requirements.txt
backend/package/: README.md  pyproject.toml
backend/package/src/: __init__.py
backend/package/src/core/agents/: __init__.py
backend/package/src/core/assistant/: assistant.py  assistants.yaml  threads.py
backend/package/src/core/assistant/tools/: stateful_tool_entity.py
backend/package/src/core/nodes/: __init__.py
backend/package/src/core/nodes/code_runner/: code_runner.py
backend/package/src/core/nodes/data_analysis/: data_analysis.py
backend/package/src/core/nodes/git/: git_base_node.py  git_branch.py  git_commit.py
backend/package/src/core/nodes/github/: github_branch.py  github_commit.py  github_milestone.py  github_node.py  github_pullrequest.py  github_search.py  github_user.py
backend/package/src/yorg_test/: __init__.py
backend/package/src/yorg_test/core/assistant/: assistant.py  async_threads.py  base_assistant.py  threads.py
backend/package/src/yorg_test/core/assistant/tools/: stateful_tool_entity.py  swe_tool_entity.py  tools.py
backend/package/src/yorg_test/core/nodes/openai/: openai.py
credentials/: google_cloud_oauth_credentials.json  google_cloud_service_account.json
frontend/: Dockerfile
package/: README.md  requirements.txt
webui/: README.md  requirements.txt  streamlitdome.py  tools.yaml
(+216 files in other folders)
